add hide video gif

--- a/faq.html
+++ b/faq.html
@@ -67,7 +67,7 @@ To un-mute yourself, simply click the black microphone button again!
 To turn your video back on, just click the camera button (now black) again. 
 </p> 
 
-	<img src="img/hide video.png" class="img wi-75-ns mhxl" alt="Image of hidden video">
+	<img src="img/video.gif" class="img wi-75-ns mhxl" alt="Demonstration of hiding video.">
 	
 	
 </div>
