add delete upload gif

--- a/faq.html
+++ b/faq.html
@@ -135,12 +135,10 @@ Last, fill in the title and author of the work and click the "publish" button.
 <p class="f4">Next to all of your uploads, you will see a small trash can icon on the right side. To delete, click the trash icon. 
 </p>
 
-<img src="img/completed_or_delete_uploaded_work.png" class="img wi-75-ns mhxl" alt="Picture of delete button">
-
 <p class="f4"> You will be prompted to confirm. After confirming by clicking “delete”, your upload will be removed from the class materials page. 
 </p>
 
-<img src="img/delete_upload.png" class="img wi-75-ns mhxl" alt="Image of deleting upload">
+<img src="img/delete_upload.gif" class="img wi-75-ns mhxl" alt="Demonstration of deleting upload">
 </div>
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
