--- a/faq.html
+++ b/faq.html
@@ -115,7 +115,7 @@ Last, fill in the title and author of the work and click the "publish" button.
 
 <p class="f4"> Once you click the button, an upload drawer will open up on the right side. 
 </p>
-	<img src="img/delete_upload.gif" class="img wi-75-ns mhxl" alt="Demonstration of uploading.">
+	<img src="img/upload.gif" class="img wi-75-ns mhxl" alt="Demonstration of uploading.">
 
 
 </div>
