--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ layout: master
   </div>
   <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
     <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING, HUMANIZED</h2>
+    <div class="tc pam">
+      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the course catalog</a>
+    </div>
     <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
     <div class="cf">
       <div class="mw5 mw7-ns tc center ">
@@ -15,26 +18,6 @@ layout: master
       </div>
     </div>
 
-    <section class="tc center mtl">
-      <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-        <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div class="mc-field-group">
-            <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
-              <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
-            </div>
-            <div id="mce-responses" class="clear">
-              <div class="response" id="mce-error-response" style="display:none;color:#fff"></div>
-              <div class="response" id="mce-success-response" style="display:none;color:#fff"></div>
-            </div>
-            <div class="mtm">
-              <input type="submit" value="Find out more" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
-            </div>
-
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_04aed0f3b7" tabindex="-1" value=""></div>
-        </form>
-          </div>
-    </section>
       </div>
 </header>
 
@@ -46,13 +29,26 @@ layout: master
         </p>
       </div>
     </div>
+    <section class="bg-light-gray tc center mtl">
+      <div class="phm phl-ns lh-copy f4 ptm pbl br3">
+        <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div class="mc-field-group">
+            <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
+              <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none;color:#fff"></div>
+              <div class="response" id="mce-success-response" style="display:none;color:#fff"></div>
+            </div>
+            <div class="mtm">
+              <input type="submit" value="Subscribe to mailing list" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
+            </div>
 
-        <div class="br3 mw8 center mtx bg-aqua-light pal">
-          <p class="f4 f3-ns tc fw1 lh-copy mbn">If you're a teacher and you value discussion, we'd love to get to know you.</p>
-          <div class="tc pvl">
-            <a class="btn btn--blue pam br4 f5" href="http://bit.ly/oneroom-teacher-survey">Take short teacher survey</a>
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_04aed0f3b7" tabindex="-1" value=""></div>
+        </form>
           </div>
-        </div>
+    </section>
     </main>
 
     <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
