--- a/writing.html
+++ b/writing.html
@@ -97,7 +97,7 @@ title: teach writing
           <div class="response" id="mce-success-response" style="display:none"></div>
         </div>
         <div class="mtm">
-          <input type="submit" value="Notify me when OneRoom is ready" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
+          <input type="submit" value="Subscribe to mailing list" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
         </div>
 
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
