Removes unnecessary description of the teaching experience.

--- a/writing.html
+++ b/writing.html
@@ -23,15 +23,13 @@ title: teach writing
 </div>
 
 <div class="br3 center mtx bg-aqua-light pal">
-  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested? We'd love to get to know you.</p>
+  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in teaching on OneRoom?</p>
   <div class="tc pvl">
-    <a class="btn btn--blue pam br4 f5" href="http://bit.ly/oneroom-teacher-survey">Take short teacher survey</a>
+    <a class="btn btn--blue pam br4 f5" href="http://bit.ly/oneroom-teacher-survey">Sign up for the waiting list</a>
   </div>
 </div>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Teaching Experience</h1>
-
-<p class="lh-copy serif fw1 f3 tc wi100 center wi-50-ns">OneRoom handles all the nuances of the workshop format. Assign readings, invite students to comment on them, select students to be workshopped, manage other students' written responses. And in live meetings, mingle before the session starts and after it ends, and manage the stage just like you would in person, directing attention and  steering the conversation. In an easy-to-use, friendly-feeling browser-based classroom.</p>
+<h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Classroom Experience</h1>
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
 
