Adds anchor link to refunds section of terms.

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -60,7 +60,7 @@ title: terms and conditions
   from you and that you will be responsible for all costs and expenses Incurred by OneRoom in connection with such collection activity, Including collection fees, court costs and attorneys' fees. you further agree that OneRoom may collect interest
   at the lesser of 1.5% per month or the highest amount permitted by law on any amounts not paid when due.</p>
   <p>
-  <strong>7. Refunds. </strong>
+  <a name="refund-policy"><strong>7. Refunds. </strong></a>
   If you, as a student, cancel your enrollment in a Course and request a refund up to five (5) business days before the first scheduled meeting of that Course, we will provide you with a full refund of the amount you paid less a $35 cancellation fee. No refunds will be offered within five days of a Course’s first scheduled meeting or once it has begun. To request a refund, please contact us at help@joinoneroom.com. Please note that if we believe that you are abusing our refund policy in our sole discretion, we reserve the right to suspend or terminate your account and refuse or restrict any and all current or future use of the products. 
   </p>
   <p>
