--- a/writing.html
+++ b/writing.html
@@ -1,42 +1,38 @@
 ---
 layout: master
-title: teach writing
+title: for writers
 ---
 
 {% include smallheader.html %}
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mtxl mbl">Teach Writing with OneRoom</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mtxl mbl">Write with OneRoom</h1>
 
 <div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3">OneRoom makes it easy to teach online writing classes that feel like live workshops. You can:</p>
+  <p class="fw1 f3">OneRoom creative writing classes feel like live workshops.</p>
     <ul>
-      <li>Plan and schedule classes</li>
-      <li>Connect with students from anywhere in the world</li>
-      <li>Set your own prices</li>
-      <li>Register students</li>
-      <li>Accept payment</li>
-      <li>Assign reading</li>
-      <li>Select students to be workshopped</li>
-      <li>Manage written feedback</li>
+      <li>Talk face-to-face with other writers</li>
+      <li>Engage with great teachers in a small class</li>
+      <li>Receive in-person and written feedback on your work</li>
+      <li>Connect with writers from anywhere in the world</li>
     </ul>
-  <p class="fw1 f3">In a clean, friendly interface that allows you to focus on teaching and mentorship.</p>
+  <p class="fw1 f3">OneRoom is a clean, friendly interface focused on writing and community.</p>
 </div>
 
 <div class="br3 center mtx bg-aqua-light pal">
-  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in teaching on OneRoom?</p>
+  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in a class?</p>
   <div class="tc pvl">
-    <a class="btn btn--blue pam br4 f5" href="http://bit.ly/oneroom-teacher-survey">Sign up for the waiting list</a>
+    <a class="btn btn--blue pam br4 f5" href="https://app.joinoneroom.com/course">Browse Classes</a>
   </div>
 </div>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Classroom Experience</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Experience</h1>
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
 
   <article class="fl center">
       <div class="wi-25-ns fl mrl">
         <h1 class="mbn blue"><a name="workshop">Workshop</a></h1>
-        <p class="serif mrm">Bring readings or a student's work into focus for discussion.</p>
+        <p class="serif mrm">Focus on readings or student work for discussion.</p>
       </div>
       <img src="img/workshop.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
@@ -44,7 +40,7 @@ title: teach writing
   <article class="fl">
     <div class="wi-25-ns fl mrl">
       <h1 class="mbn blue"><a name="share">Share</a></h1>
-      <p class="serif mrm">Share readings easily, and allow students to share their work securely.</p>
+      <p class="serif mrm">Share readings and work easily.</p>
     </div>
     <img src="img/share.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
@@ -52,7 +48,7 @@ title: teach writing
   <article class="fl">
     <div class="wi-25-ns fl mrl">
       <h1 class="mbn blue"><a name="comment">Comment</a></h1>
-      <p class="serif mrm">Students can make private notes and share comments on one another's work.</p>
+      <p class="serif mrm">Compose private notes and share comments on one another's work.</p>
     </div>
     <img src="img/comment.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
@@ -60,7 +56,7 @@ title: teach writing
   <article class="fl">
     <div class="wi-25-ns fl mrl">
       <h1 class="mbn blue"><a name="discuss">Discuss</a></h1>
-      <p class="serif mrm">Facilitate live discussions with everyone on an equal footing.</p>
+      <p class="serif mrm">Engage in small, live discussions with everyone. Be seen, be heard, be inspired.</p>
     </div>
     <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
