discuss at the top

--- a/writing.html
+++ b/writing.html
@@ -29,6 +29,14 @@ title: for writers
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
 
+<article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue"><a name="discuss">Discuss</a></h1>
+      <p class="serif mrm">Engage in small, live discussions with everyone. Be seen, be heard, be inspired.</p>
+    </div>
+    <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+  </article>
+
   <article class="fl center">
       <div class="wi-25-ns fl mrl">
         <h1 class="mbn blue"><a name="workshop">Workshop</a></h1>
@@ -55,11 +63,21 @@ title: for writers
 
   <article class="fl">
     <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue"><a name="discuss">Discuss</a></h1>
-      <p class="serif mrm">Engage in small, live discussions with everyone. Be seen, be heard, be inspired.</p>
+      <h1 class="mbn blue"><a name="mingle">Mingle</a></h1>
+      <p class="serif mrm">Have multiple parallel conversations in informal "mingling" mode.</p>
     </div>
-    <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+    <img src="img/mingle.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
   </article>
+
+  <article class="fl">
+    <div class="wi-25-ns fl mrl">
+      <h1 class="mbn blue"><a name="breakout">Breakout</a></h1>
+      <p class="serif mrm">Break into smaller groups for planned or impromptu exercises.</p>
+    </div>
+    <img src="img/breakout.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+  </article>
+
+</div>
 
 <section class="bg-lightest-gray tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
