change subscribe button

--- a/writing.html
+++ b/writing.html
@@ -68,14 +68,14 @@ title: for writers
     <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div class="mc-field-group">
         <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
-          <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: hi@gmail.com" name="EMAIL"/>
+          <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: writer@gmail.com" name="EMAIL"/>
         </div>
         <div id="mce-responses" class="clear">
           <div class="response" id="mce-error-response" style="display:none"></div>
           <div class="response" id="mce-success-response" style="display:none"></div>
         </div>
         <div class="mtm">
-          <input type="submit" value="Subscribe to mailing list" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
+          <input type="submit" value="Subscribe to OneRoom News" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
         </div>
 
         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
