better browse button?

--- a/writing.html
+++ b/writing.html
@@ -18,11 +18,9 @@ title: for writers
   <p class="fw1 f3">OneRoom is a clean, friendly interface focused on writing and community.</p>
 </div>
 
-<div class="br3 center mtx bg-aqua-light pal">
-  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in a class?</p>
-  <div class="tc pvl">
-    <a class="btn btn--blue pam br4 f5" href="https://app.joinoneroom.com/course">Browse Classes</a>
-  </div>
+  <div class="tc pam">
+      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the course catalog</a>
+    </div>
 </div>
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Experience</h1>
