--- a/writing.html
+++ b/writing.html
@@ -17,7 +17,8 @@ title: for writers
     </ul>
   <p class="fw1 f3">OneRoom is a clean, friendly interface focused on writing and community.</p>
 </div>
-
+<div class="br3 center mtx bg-aqua-light pal">
+  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in a class?</p>
   <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the course catalog</a>
     </div>
