change buttons to say class instead of course

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: master
   <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
     <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING, HUMANIZED</h2>
     <div class="tc pam">
-      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the course catalog</a>
+      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
     <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
     <div class="cf">
