--- a/writing.html
+++ b/writing.html
@@ -20,7 +20,7 @@ title: for writers
 <div class="br3 center mtx bg-aqua-light pal">
   <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in a class?</p>
   <div class="tc pam">
-      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the course catalog</a>
+      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
 </div>
 
