Makes it more clear that blog index page is excerpts not complete posts.

--- a/blog.html
+++ b/blog.html
@@ -16,6 +16,7 @@ title: blog
     <div class="lh-copy pts post">
       {{ post.excerpt }}
     </div>
+    <a class="link" href="{{ post.url }}">read on-></a>
   </div>
   {% endfor %}
 </div>
