--- a/writing.html
+++ b/writing.html
@@ -5,6 +5,24 @@ title: for writers
 
 {% include smallheader.html %}
 
+<header>
+  <div class="link">
+  </div>
+  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
+    <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE LEARNING, HUMANIZED</h2>
+    <div class="tc pam">
+      <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
+    </div>
+    <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
+    <div class="cf">
+      <div class="mw5 mw7-ns tc center ">
+        <img src="img/modes.png" class="dib">
+      </div>
+    </div>
+
+      </div>
+</header>
+
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl mbl">Write with OneRoom</h1>
 
 <div class="lh-copy serif wi-100 wi-50-ns center">
