minimize bottom of green section

--- a/writing.html
+++ b/writing.html
@@ -8,12 +8,12 @@ title: for writers
 <header>
   <div class="link">
   </div>
-  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/people_coffeeshop.jpg);background-position: center top;">
+  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
     <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE WRITING WORKSHOPS, HUMANIZED</h2>
     <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
-    <hr style="height:0;padding-bottom:1px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
+    <hr style="height:0;padding-bottom:0.5px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
 
       </div>
 </header>
