no bottom padding?

--- a/writing.html
+++ b/writing.html
@@ -13,7 +13,7 @@ title: for writers
     <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
-    <hr style="height:0;padding-bottom:0.5px;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
+    <hr style="height:0;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
 
       </div>
 </header>
