--- a/writing.html
+++ b/writing.html
@@ -77,6 +77,7 @@ title: for writers
 
 <section class="bg-lightest-gray tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
+   <p class="fw1 f3">Subscribe, and be notified of upcoming classes!</p>
     <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div class="mc-field-group">
         <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
