get rid of bottom blue bleed

--- a/writing.html
+++ b/writing.html
@@ -57,7 +57,6 @@ title: for writers
       (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));
       var $mcj = jQuery.noConflict(true);
     </script>
-
 </div>
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mvl">The Experience</h1>
@@ -97,8 +96,10 @@ title: for writers
   </article>
 
 </div>
-<div class="br3 center mtx bg-aqua-light pal">
+<section class="bg-aqua-light tc center mtl">
+  <div class="phm phl-ns lh-copy f4 ptm pbl br3">
   <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in a class?</p>
   <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
+</section>
