change the copy!

--- a/writing.html
+++ b/writing.html
@@ -18,8 +18,11 @@ title: for writers
       </div>
 </header>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mtxl mbl">Write with OneRoom</h1>
-
+<h1 class="fl wi-100 f2 fw7 tc ttu mtxl mbl">What is this thing?</h1>
+<div class="lh-copy serif wi-100 wi-50-ns">
+  <p class="fw1 f3">Great question.</p>
+  </p>
+  </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">OneRoom creative writing classes feel like live workshops.</p>
     <ul>
