--- a/writing.html
+++ b/writing.html
@@ -19,7 +19,7 @@ title: for writers
 </header>
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtxl mbl">What is this thing?</h1>
-<div class="lh-copy serif wi-100 wi-50-ns">
+<div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Great question.</p>
   </p>
   </div>
