--- a/writing.html
+++ b/writing.html
@@ -18,7 +18,7 @@ title: for writers
       </div>
 </header>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mtxl">What is this thing?</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mbl">What is this thing?</h1>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Great question.</p>
   </p>
