--- a/writing.html
+++ b/writing.html
@@ -18,9 +18,10 @@ title: for writers
       </div>
 </header>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">What is this thing?</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">
+<a href="#Thing?">What is this thing?</a></h1>
 <div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3">Great question.</p>
+  <p class="fw1 f3"><a name="Thing?">Great question.</a></p>
   </p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
