link in page experiment

--- a/writing.html
+++ b/writing.html
@@ -19,9 +19,9 @@ title: for writers
 </header>
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">
-<a href="#Thing?">What is this thing?</a></h1>
+<a href="#Thing?"><a name="Thing?">What is this thing?</a></a></h1>
 <div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3"><a name="Thing?">Great question.</a></p>
+  <p class="fw1 f3">Great question.</p>
   </p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
