delete in page link - cool idea, weird color

--- a/writing.html
+++ b/writing.html
@@ -18,8 +18,7 @@ title: for writers
       </div>
 </header>
 
-<h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">
-<a name="Thing?" style= "color:#116c9f"><a href="#Thing?">What is this thing?</a></a></h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">What is this thing?</h1>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Great question.</p>
   </p>
