--- a/writing.html
+++ b/writing.html
@@ -21,7 +21,7 @@ title: for writers
 <h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">What is this thing?</h1>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Great question.</p>
-  </p>
+    <p class="fw1 f3">OneRoom is a new kind of online writing class. </p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">OneRoom creative writing classes feel like live workshops.</p>
