--- a/writing.html
+++ b/writing.html
@@ -61,7 +61,7 @@ title: for writers
       var $mcj = jQuery.noConflict(true);
     </script>
 </div>
-<h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">The Experience</h1>
+<h1 class="fl wi-100 f2 fw7 tc ttu mvl mbl">The Experience</h1>
 
 <div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
 
