--- a/writing.html
+++ b/writing.html
@@ -19,6 +19,7 @@ title: for writers
 </header>
 
 <h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">What is this thing?</h1>
+<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Great question.</p>
     <p class="fw1 f3">OneRoom is a new kind of online writing class. </p>
@@ -32,6 +33,7 @@ title: for writers
       <li>Connect with writers from anywhere in the world</li>
     </ul>
   <p class="fw1 f3">OneRoom is a clean, friendly interface focused on writing and community.</p>
+</div>
 </div>
 <section class="bg-lightest-gray tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
