--- a/writing.html
+++ b/writing.html
@@ -61,7 +61,7 @@ title: for writers
     </script>
 </div>
 <h1 class="fl wi-100 f2 fw7 tc ttu mvl mbl">The Experience</h1>
-
+<div class="center mw8 phl phn-ns cf bt ptm mtx">
 
 <article class="fl">
     <div class="wi-25-ns fl mrl">
