--- a/writing.html
+++ b/writing.html
@@ -23,7 +23,7 @@ title: for writers
     <p class="fw1 f3">OneRoom is a new kind of online writing class. It's everything you love about <i>writing classes</i>, without everything you hate about online classes.</p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3">OneRoom creative writing classes feel like live workshops.</p>
+  <p class="fw1 f3">Imagine a place where you can:</p>
     <ul>
       <li>Talk face-to-face with other writers</li>
       <li>Engage with great teachers in a small class</li>
