--- a/writing.html
+++ b/writing.html
@@ -20,7 +20,7 @@ title: for writers
 <h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">What is this thing?</h1>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Great question.</p>
-    <p class="fw1 f3">OneRoom is a new kind of online writing class. It's everything you <i>love</i> about writing classes, without.</p>
+    <p class="fw1 f3">OneRoom is a new kind of online writing class. It's everything you <i>love</i> about writing classes, without the commute.</p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Imagine a place where you can:</p>
