--- a/writing.html
+++ b/writing.html
@@ -22,7 +22,7 @@ title: for writers
   <p class="fw1 f3">Great question.</p>
   </div>
  <div class="lh-copy serif wi-100 wi-60-ns center">
-    <p class="fw1 f3">OneRoom is a new kind of online writing class. It's everything you <i>love</i> about writing classes, without the commute.</p>
+    <p class="fw1 f3">OneRoom is a new kind of creative online writing class.</p>
   </div>
 <div class="lh-copy serif wi-100 wi-60-ns center">
   <p class="fw1 f3">Imagine a place where you can:</p>
