--- a/writing.html
+++ b/writing.html
@@ -22,7 +22,7 @@ title: for writers
   <p class="fw1 f3">Great question.</p>
   </div>
  <div class="lh-copy serif wi-100 wi-50-ns center">
-    <p class="fw1 f3">OneRoom is a place for writers to come together from all over the world, and collaborate, learn, and write together.</p>
+    <p class="fw1 f3">OneRoom is a place for writers to come together from all over the world and collaborate, learn, and write together.</p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
   <p class="fw1 f3">Imagine a place where you can:</p>
