--- a/writing.html
+++ b/writing.html
@@ -30,7 +30,7 @@ title: for writers
       <li>Talk face-to-face with other writers</li>
       <li>Engage with great teachers in a small class</li>
       <li>Receive in-person and written feedback on your work</li>
-      <li>Connect with writers from anywhere in the world</li>
+      <li>Connect with writers, no matter where you are</li>
     </ul>
   <p class="fw1 f3">CHANGE OneRoom is a place to be seen, be heard, and be inspired.</p>
 </div>
