--- a/writing.html
+++ b/writing.html
@@ -32,11 +32,11 @@ title: for writers
       <li>Receive in-person and written feedback on your work</li>
       <li>Connect with writers, no matter where you happen to be</li>
     </ul>
-  <p class="fw1 f3">CHANGE OneRoom is a place to be seen, be heard, and be inspired.</p>
+  <p class="fw1 f3">OneRoom </p>
 </div>
 <section class="bg-lightest-gray tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-   <p class="fw1 f3">Be notified of upcoming classes!</p>
+   <p class="fw1 f3">Want to keep updated on upcoming classes?</p>
     <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
       <div class="mc-field-group">
         <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
