--- a/writing.html
+++ b/writing.html
@@ -32,7 +32,7 @@ title: for writers
       <li>Receive in-person and written feedback on your work</li>
       <li>Connect with writers, no matter where you happen to be</li>
     </ul>
-  <p class="fw1 f3">OneRoom is that feeling of sitting around a table of writers and feeling both overwhelmingly challenged, and utterly inspired. It's a place for you to start your project, hone your craft, and build community.</p>
+  <p class="fw1 f3">OneRoom is that feeling of sitting around a table of writers and feeling both overwhelmingly challenged, and utterly inspired. It's a place for you to start your project, hone your craft, and build your writing community.</p>
 </div>
 <section class="bg-lightest-gray tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
