minimize bottom margin

--- a/writing.html
+++ b/writing.html
@@ -13,7 +13,7 @@ title: for writers
     <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
-    <hr style="height:0;background:rgba(0,0,0,.1);border:0;" class="mw7 mvl">
+    <hr style="height:0;background:rgba(0,0,0,.1);border:0;" class="mw7 mvn">
 
       </div>
 </header>
@@ -22,17 +22,17 @@ title: for writers
   <p class="fw1 f3">Great question.</p>
   </div>
  <div class="lh-copy serif wi-100 wi-50-ns center">
-    <p class="fw1 f3">OneRoom is a place where writers can gather from all over the world to collaborate, learn, and write together.</p>
+    <p class="fw1 f3">OneRoom gathers writers from all over the world to collaborate, learn, and write together.</p>
   </div>
 <div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3">Imagine a place where you can:</p>
+  <p class="fw1 f3">OneRoom creates a place to:</p>
     <ul>
       <li>Talk face-to-face with other writers</li>
       <li>Engage with great teachers in a small class</li>
       <li>Receive in-person and written feedback on your work</li>
       <li>Connect with writers, no matter where you happen to be</li>
     </ul>
-  <p class="fw1 f3">OneRoom is that feeling of sitting around a table of writers and feeling both overwhelmingly challenged, and utterly inspired. It's a place for you to start your project, hone your craft, and build your writing community.</p>
+  <p class="fw1 f3">In OneRoom, you get the feeling of sitting around a table of writers to find challenge and inspiration while also bridging distances and shortening commutes. It's a place¬—accessible from anywhere—to start your project, hone your craft, and build your writing community.</p>
 </div>
 <section class="bg-lightest-gray tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
