--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ layout: master
   <div class="link">
   </div>
   <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
-    <h2 class="mtn f2 mega-ns fw7 white tc ptl mvl">Online Learning, Humanized</h2>
-    <p class="white f2-l mw7 mbl center">The best way to learn anything is with other humans. OneRoom makes that possible online - finally. Meet face-to-face and learn together in video classrooms you can access from anywhere.</p>
+    <h2 class="mtn f2 mega-ns fw7 white tc ptn mtl mbm">Online Learning, Humanized</h2>
+    <p class="white f3 mw7 mbl center">The best way to learn anything is with other humans. OneRoom makes that possible online - finally. Meet face-to-face and learn together in video classrooms you can access from anywhere.</p>
     <div class="cf mw8 center">
       {% for course in site.data.courses %}
         <div class="mw5 fl mlx">
@@ -16,7 +16,7 @@ layout: master
         </div>
       {% endfor %}
     </div>
-    <div class="tc pam mtl">
+    <div class="tc pam mts">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse all classes</a>
     </div>
   </div>
