Better responsiveness for class cards

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: master
   <div class="link">
   </div>
   <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/header.jpg);background-position: center top;">
-    <h2 class="mtn f2 mega-ns fw7 white tc ptn mtl mbm">Online Learning, Humanized</h2>
+    <h2 class="mtn f1 mega-ns fw7 white tc ptn mtl mbm">Online Learning, Humanized</h2>
     <p class="white f3 mw7 mbl center">The best way to learn anything is with other humans. OneRoom makes that possible online - finally. Meet face-to-face and learn together in video classrooms you can access from anywhere.</p>
-    <div class="cf mw8 center">
+    <div class="cf mw-100 mw8-ns center">
       {% for course in site.data.courses %}
-        <div class="mw5 fl mlx">
+        <div class="wi-100 wi5-ns fl mlx-ns">
           {% include coursecard.html %}
         </div>
       {% endfor %}
