revised writing page to be new-improved about. placeholder video.

--- a/writing.html
+++ b/writing.html
@@ -9,99 +9,112 @@ title: for writers
   <div class="link">
   </div>
   <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
-    <h2 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE WRITING WORKSHOPS, HUMANIZED</h2>
+    <h1 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE WRITING CLASSES, HUMANIZED</h1>
     <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
     <hr style="height:0;background:rgba(0,0,0,.1);border:0;" class="mw7 mvn">
-
-      </div>
+  </div>
 </header>
-<h1 class="fl wi-100 f2 fw7 tc ttu mtx mbl">What is this thing?</h1>
-<div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3">Great question.</p>
-  </div>
- <div class="lh-copy serif wi-100 wi-50-ns center">
+
+<section class="mvx mhm">
+  <h2 class="fl wi-100 f2 fw7 tc ttu">What's this all about?</h2>
+  <div class="lh-copy serif wi-100 wi-50-ns center">
     <p class="fw1 f3">OneRoom gathers writers from all over the world to collaborate, learn, and write together.</p>
-  </div>
-<div class="lh-copy serif wi-100 wi-50-ns center">
-  <p class="fw1 f3">OneRoom creates a place to:</p>
     <ul>
-      <li>Talk face-to-face with other writers</li>
       <li>Engage with great teachers in a small class</li>
-      <li>Receive in-person and written feedback on your work</li>
+      <li>Talk face-to-face with other writers</li>
       <li>Connect with writers, no matter where you happen to be</li>
+      <li>Receive in-person and written feedback on your work</li>
     </ul>
-  <p class="fw1 f3">In OneRoom, you get the feeling of sitting around a table of writers to find challenge and inspiration while also bridging distances and shortening commutes. It's a place¬—accessible from anywhere—to start your project, hone your craft, and build your writing community.</p>
-</div>
-<section class="bg-lightest-gray tc center mtl">
-  <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-   <p class="fw1 f3">Want to keep updated on upcoming classes?</p>
-    <form action="//joinoneroom.us8.list-manage.com/subscribe/post?u=76d6db963f53c6373ac58a7dd&amp;id=04aed0f3b7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-      <div class="mc-field-group">
-        <div class="mw6 mbl mtm dib wi-50-ns wi-100 mc-field-group">
-          <input id="mce-EMAIL" type="email" class="wi-100 ba b--gray br2 pas required email" placeholder="example: writer@gmail.com" name="EMAIL"/>
-        </div>
-        <div id="mce-responses" class="clear">
-          <div class="response" id="mce-error-response" style="display:none"></div>
-          <div class="response" id="mce-success-response" style="display:none"></div>
-        </div>
-        <div class="mtm">
-          <input type="submit" value="Subscribe to OneRoom News" class="f5 btn btn--blue pam br3 ba bs-none" name="subscribe" id="mc-embedded-subscribe">
-        </div>
+  </div>
+</section>
 
-        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-        <div style="position: absolute; left: -5000px;"><input type="text" name="b_76d6db963f53c6373ac58a7dd_f0c4abc571" tabindex="-1" value=""></div>
-      </form>
-    </div>
-  </section>
+<section class="bg-lightest-gray mvx mhm">
+  <h2 class="fl wi-100 f2 fw7 tc ttu">What's it like?</h2>
+  <div class="wi-100 wi-50-ns tc center lh-copy serif">
+    <p class="fw1 f3">It's like a conversation around a table...without the table.</p>
+    <p class="fw2 f4">But don't take our word for it! It's like this:</p>
+  </div>
+  <div class="tc mtm pbx">
+    <iframe src="https://player.vimeo.com/video/130597078" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+  </div>
+</section>
 
-    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-    <script type='text/javascript'>
-      (function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';}(jQuery));
-      var $mcj = jQuery.noConflict(true);
-    </script>
-</div>
-<h1 class="fl wi-100 f2 fw7 tc ttu mvl mbl">The Experience</h1>
-<div class="center mw8 phl phn-ns cf bt b--light-gray ptm mtx">
+<section class="mvx mhm">
+  <h2 class="fl wi-100 f2 fw7 tc ttu">How does it work?</h2>
 
-<article class="fl">
-    <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue"><a name="discuss">Discuss</a></h1>
-      <p class="serif mrm">Engage in small, live discussions with everyone. Be seen, be heard, be inspired.</p>
-    </div>
-    <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
-  </article>
+  <div class="wi-100 wi-50-ns tc center lh-copy serif">
+    <p class="fw1 f3">The rooms are like classrooms with movable chairs.</p>
+    <p class="fw2 f4">Different "modes" support different kinds of interaction.</p>
+  </div>
 
-  <article class="fl center">
+  <div class="center mw8 phl phn-ns cf ptm mtx">
+    <article class="fl">
+      <div class="wi-25-ns fl mrl">
+        <h1 class="mbn blue"><a name="discuss">Discuss</a></h1>
+        <p class="serif mrm">Engage in small, live discussions with everyone. Be seen, be heard, be inspired.</p>
+      </div>
+      <img src="img/bradybunch.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+    </article>
+
+    <article class="fl center">
       <div class="wi-25-ns fl mrl">
         <h1 class="mbn blue"><a name="workshop">Workshop</a></h1>
         <p class="serif mrm">Focus on readings or student work for discussion.</p>
       </div>
       <img src="img/workshop.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
-  </article>
+    </article>
 
-  <article class="fl">
-    <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue"><a name="share">Share</a></h1>
-      <p class="serif mrm">Share readings and work easily.</p>
-    </div>
-    <img src="img/share.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
-  </article>
+    <article class="fl">
+      <div class="wi-25-ns fl mrl">
+        <h1 class="mbn blue"><a name="breakout">Breakout</a></h1>
+        <p class="serif mrm">Get to know the other participants in breakout sessions.</p>
+      </div>
+      <img src="img/breakout.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+    </article>
 
-  <article class="fl">
-    <div class="wi-25-ns fl mrl">
-      <h1 class="mbn blue"><a name="comment">Comment</a></h1>
-      <p class="serif mrm">Compose private notes and share comments on one another's work.</p>
-    </div>
-    <img src="img/comment.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
-  </article>
+    <article class="fl">
+      <div class="wi-25-ns fl mrl">
+        <h1 class="mbn blue"><a name="share">Share</a></h1>
+        <p class="serif mrm">Share your work and get candid feedback.</p>
+      </div>
+      <img src="img/share.png" class="fl wi-50-ns box ba mam bw4 b--near-white">
+    </article>
+  </div>
+</section>
 
-</div>
+<section class="mvx mhm">
+  <div class="wi-100 wi-75-ns lh-copy serif center">
+    <h2 class="f2 fw7 tc ttu">Wait...I have more questions</h2>
+    <p class="fw1 f3 tc">Shoot!</p>
+    <article>
+      <h3>Will it work for my schedule?</h3>
+      <p>Probably! Most classes are offered in the evenings Pacific or Eastern, and on weekends. We also have <a href="https://app.joinoneroom.com/course/?type=micro">microclasses</a>, which are exactly what they sound like. If you don't see a class that works for your schedule, we’re adding new ones all the time.</p>
+    </article>
+    <article>
+      <h3>How much does it cost?</h3>
+      <p>Class prices vary according to the experience of the teacher, but on average they cost about $30 per hour of class time. The price for microclasses is as little as $10.</p>
+    </article>
+    <article>
+      <h3>Is it safe for introverts?</h3>
+      <p>Yes! It's ok to be quiet. Active listening is also encouraged.</p>
+    </article>
+    <article>
+      <h3>Will I be in over my head?</h3>
+      <p>Most classes are open to all, so assume that includes you, no matter your level of experience (unless the class description or title indicate otherwise  - "advanced workshop" or the like). In short, beginners are welcome.</p>
+    </article>
+    <article>
+      <h3>Can I teach?</h3>
+      <p>Please <a class="link" href="mailto:info@joinoneroom.com">contact us</a> if you want to teach. We'd love to talk.</p>
+    </article>
+  </div>
+</section>
+
 <section class="bg-aqua-light tc center mtl">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
-  <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested in a class?</p>
-  <div class="tc pam">
+    <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested?</p>
+    <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
 </section>
