Re-adds a sentence to the "What's this all about" section.

--- a/writing.html
+++ b/writing.html
@@ -27,6 +27,7 @@ title: for writers
       <li>Connect with writers, no matter where you happen to be</li>
       <li>Receive in-person and written feedback on your work</li>
     </ul>
+    <p class="fw1 f3">We're here to help you start your project, hone your craft, and build your writing community.</p>
   </div>
 </section>
 
