Adds "link" class to link to microclasses.

--- a/writing.html
+++ b/writing.html
@@ -91,7 +91,7 @@ title: for writers
     <p class="fw1 f3 tc">Shoot!</p>
     <article>
       <h3>Will it work for my schedule?</h3>
-      <p>Probably! Most classes are offered in the evenings Pacific or Eastern, and on weekends. We also have <a href="https://app.joinoneroom.com/course/?type=micro">microclasses</a>, which are exactly what they sound like. If you don't see a class that works for your schedule, we’re adding new ones all the time.</p>
+      <p>Probably! Most classes are offered in the evenings Pacific or Eastern, and on weekends. We also have <a class="link" href="https://app.joinoneroom.com/course/?type=micro">microclasses</a>, which are exactly what they sound like. If you don't see a class that works for your schedule, we’re adding new ones all the time.</p>
     </article>
     <article>
       <h3>How much does it cost?</h3>
