--- a/writing.html
+++ b/writing.html
@@ -17,9 +17,10 @@ title: for writers
   </div>
 </header>
 
-<section class="mvx mhm">
-  <h2 class="fl wi-100 f2 fw7 tc ttu">What's this all about?</h2>
-  <div class="lh-copy serif wi-100 wi-50-ns center">
+<section class="mvx mhm center">
+  <div class="fl wi-50-ns wi-100 phm">
+  <h2 class="f2 fw7 tc ttu">What's this all about?</h2>
+  <div class="lh-copy serif center wi-75">
     <p class="fw1 f3">OneRoom gathers writers from all over the world to collaborate, learn, and write together.</p>
     <ul>
       <li>Engage with great teachers in a small class</li>
@@ -29,16 +30,17 @@ title: for writers
     </ul>
     <p class="fw1 f3">We're here to help you start your project, hone your craft, and build your writing community.</p>
   </div>
-</section>
+  </div>
 
-<section class="bg-lightest-gray mvx mhm">
-  <h2 class="fl wi-100 f2 fw7 tc ttu">What's it like?</h2>
-  <div class="wi-100 wi-50-ns tc center lh-copy serif">
+  <div class="fl wi-50-ns wi-100 prm">
+  <h2 class="f2 fw7 tc ttu">What's it like?</h2>
+  <div class="center lh-copy serif wi-75">
     <p class="fw1 f3">It's like a conversation around a table...without the table.</p>
     <p class="fw2 f4">But don't take our word for it! It's like this:</p>
   </div>
   <div class="tc mtm pbx">
     <iframe src="https://player.vimeo.com/video/130597078" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+  </div>
   </div>
 </section>
 
