Makes minor styling and spacing changes

--- a/writing.html
+++ b/writing.html
@@ -8,8 +8,8 @@ title: for writers
 <header>
   <div class="link">
   </div>
-  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbxl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
-    <h1 class="mtn f2 mega-ns fw7 white tc ptl ptx-ns mtl">ONLINE WRITING CLASSES, HUMANIZED</h1>
+  <div class="bt bw3 b--green center mw-fill-l phm phl-ns pbl bg-cv" style="background-image:url(img/writers_header.jpg);background-position: center top;">
+    <h1 class="mtn f1 mega-ns fw7 white tc ptn mtl mbm">Online Writing Classes, Humanized</h1>
     <div class="tc pam">
       <a class="btn btn--blue pal br3" href="http://app.joinoneroom.com/course">Browse the class catalog</a>
     </div>
@@ -17,12 +17,12 @@ title: for writers
   </div>
 </header>
 
-<section class="mvx mhm center">
-  <div class="fl wi-50-ns wi-100 phm">
+<section class="pvx mhn center cf bg-dark-blue white">
+  <div class="fl wi-50-ns wi-100 pll">
   <h2 class="f2 fw7 tc ttu">What's this all about?</h2>
   <div class="lh-copy serif center wi-75">
     <p class="fw1 f3">OneRoom gathers writers from all over the world to collaborate, learn, and write together.</p>
-    <ul>
+    <ul class="fw1 f3">
       <li>Engage with great teachers in a small class</li>
       <li>Talk face-to-face with other writers</li>
       <li>Connect with writers, no matter where you happen to be</li>
@@ -32,14 +32,13 @@ title: for writers
   </div>
   </div>
 
-  <div class="fl wi-50-ns wi-100 prm">
-  <h2 class="f2 fw7 tc ttu">What's it like?</h2>
-  <div class="center lh-copy serif wi-75">
-    <p class="fw1 f3">It's like a conversation around a table...without the table.</p>
-    <p class="fw2 f4">But don't take our word for it! It's like this:</p>
-  </div>
+  <div class="fl wi-50-ns wi-100 prl">
+    <h2 class="f2 fw7 tc ttu">What's it like?</h2>
+    <div class="center lh-copy serif wi-75">
+      <p class="fw1 f3">It's like a conversation around a table...without the table. But don't take our word for it! It's like this:</p>
+    </div>
   <div class="tc mtm pbx">
-    <iframe src="https://player.vimeo.com/video/130597078" width="500" height="313" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+    <iframe src="https://player.vimeo.com/video/130597078" width="650" height="390" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
   </div>
   </div>
 </section>
@@ -87,7 +86,7 @@ title: for writers
   </div>
 </section>
 
-<section class="mvx mhm">
+<section class="pvx phm bg-lightest-gray">
   <div class="wi-100 wi-75-ns lh-copy serif center">
     <h2 class="f2 fw7 tc ttu">Wait...I have more questions</h2>
     <p class="fw1 f3 tc">Shoot!</p>
@@ -114,7 +113,7 @@ title: for writers
   </div>
 </section>
 
-<section class="bg-aqua-light tc center mtl">
+<section class="bg-aqua-light tc center">
   <div class="phm phl-ns lh-copy f4 ptm pbl br3">
     <p class="f4 f3-ns tc fw1 lh-copy mbn">Interested?</p>
     <div class="tc pam">
