--- a/writing.html
+++ b/writing.html
@@ -20,7 +20,7 @@ title: for writers
 <section class="pvx mhn center cf bg-dark-blue white">
   <div class="fl wi-50-ns wi-100 pll">
   <h2 class="f2 fw7 tc ttu">What's this all about?</h2>
-  <div class="lh-copy serif center wi-75">
+  <div class="lh-copy serif center wi-75-ns">
     <p class="fw1 f3">OneRoom gathers writers from all over the world to collaborate, learn, and write together.</p>
     <ul class="fw1 f3">
       <li>Engage with great teachers in a small class</li>
@@ -32,13 +32,15 @@ title: for writers
   </div>
   </div>
 
-  <div class="fl wi-50-ns wi-100 prl">
+  <div class="fl wi-50-ns wi-100 prl-ns pln-ns phl">
     <h2 class="f2 fw7 tc ttu">What's it like?</h2>
-    <div class="center lh-copy serif wi-75">
+    <div class="center lh-copy serif wi-75-ns">
       <p class="fw1 f3">It's like a conversation around a table...without the table. But don't take our word for it! It's like this:</p>
     </div>
   <div class="tc mtm pbx">
-    <iframe src="https://player.vimeo.com/video/130597078" width="650" height="390" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    <div class="video-wrapper">
+      <iframe src="https://player.vimeo.com/video/130597078" width="650" height="390" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
   </div>
   </div>
 </section>
