Updates video embed code

--- a/writing.html
+++ b/writing.html
@@ -34,12 +34,12 @@ title: for writers
 
   <div class="fl wi-50-ns wi-100 prl-ns pln-ns phl">
     <h2 class="f2 fw7 tc ttu">What's it like?</h2>
-    <div class="center lh-copy serif wi-75-ns">
+    <div class="center lh-copy serif wi-80-ns">
       <p class="fw1 f3">It's like a conversation around a table...without the table. But don't take our word for it! It's like this:</p>
     </div>
   <div class="tc mtm pbx">
     <div class="video-wrapper">
-      <iframe src="https://player.vimeo.com/video/130597078" width="650" height="390" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe class="tscplayer_inline embeddedObject" name="tsc_player" scrolling="no" frameborder="0" type="text/html" style="overflow:hidden;" src="http://www.screencast.com/users/kayla7308/folders/Camtasia/media/183ced50-35b1-4257-b1c9-75c1f5e22335/embed" height="320" width="512" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
   </div>
   </div>
