Changes About OneRoom video to Youtube embed

--- a/writing.html
+++ b/writing.html
@@ -39,7 +39,7 @@ title: for writers
     </div>
   <div class="tc mtm pbx">
     <div class="video-wrapper">
-      <iframe class="tscplayer_inline embeddedObject" name="tsc_player" scrolling="no" frameborder="0" type="text/html" style="overflow:hidden;" src="http://www.screencast.com/users/kayla7308/folders/Camtasia/media/183ced50-35b1-4257-b1c9-75c1f5e22335/embed" height="320" width="512" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      <iframe width="552" height="414" src="https://www.youtube.com/embed/mdGHr765KfE" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
   </div>
