Adjusts video controls to simpler format

--- a/writing.html
+++ b/writing.html
@@ -39,7 +39,7 @@ title: for writers
     </div>
   <div class="tc mtm pbx">
     <div class="video-wrapper">
-      <iframe width="552" height="414" src="https://www.youtube.com/embed/mdGHr765KfE" frameborder="0" allowfullscreen></iframe>
+      <iframe width="552" height="414" src="https://www.youtube.com/embed/mdGHr765KfE?showinfo=0&controls=0" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
   </div>
